# lib

./: .gitignore  Cargo.toml
bible/: Cargo.toml  err.txt
bible/Bible/: Package.swift
bible/Bible/Sources/Bible/: bible.swift  book.swift  daemon.swift  name.swift  source.swift
bible/Bible/bibleFFI.xcframework/: Info.plist
bible/Bible/bibleFFI.xcframework/ios-arm64/Headers/bibleFFI/: bibleFFI.h  deedFFI.h
bible/Bible/bibleFFI.xcframework/ios-arm64_x86_64-simulator/Headers/bibleFFI/: bibleFFI.h  daemonFFI.h  nameFFI.h
bible/Bible/bibleFFI.xcframework/macos-arm64_x86_64/Headers/bibleFFI/: bibleFFI.h  daemonFFI.h  deedFFI.h  module.modulemap  nameFFI.h
bible/Bible/sourceFFI.xcframework/: Info.plist
bible/examples/: john.rs  priests.rs  yeshua.rs
bible/src/: genealogy.rs  io.rs  lib.rs
bible/tests/: kjv.rs
book/: Cargo.toml
citation/: Cargo.toml
daemon/: Cargo.toml
deed/: Cargo.toml  err.txt
downloader/: Cargo.toml
equities/: Cargo.toml  reported_items.json
equities/examples/: augurs.rs  dump_labels.rs  gen_nvda.rs  inspect_sheets.rs  items.rs  pdf.rs
equities/nvda/: 1999-04-29.xlsx  1999-06-15.xls  1999-12-10.xlsx  2000-03-13.xls  2000-03-13.xlsx  2000-06-14.xlsx  2000-12-00.xlsx  2001-04-27.xls  2001-05-25.xlsx  2001-06-12.xls  2001-06-12.xlsx  2001-09-10.xlsx  2002-04-29.xlsx  2002-05-14.xls  2002-05-14.xlsx  2002-06-10.xlsx  2002-09-10.xlsx  2003-09-09.xls  2003-09-09.xlsx  2003-11-21.xlsx  2004-03-29.xlsx  2004-05-20.xls  2004-05-20.xlsx  2004-11-22.xls  2005-03-22.xls  2005-06-02.xls  2005-06-02.xlsx  2005-08-25.xls  2005-11-23.xlsx  2006-05-31.xls  2006-05-31.xlsx  2006-11-29.xls  2006-11-29.xlsx  2007-03-16.xls  2007-03-16.xlsx  2007-08-22.xls  2007-08-22.xlsx  2007-11-21.xlsx  2008-08-21.xls  2008-08-21.xlsx  (+69 more)
equities/src/: col_info.rs  item.rs  lib.rs  mod.rs  nvda.rs  pdf.rs  reader.rs  sheet_info.rs  tsla.rs  xlsx.rs
equities/tests/: nvda-2025-10-26.rs  nvda-2025-11-19.rs  reported.rs  tsla-2025-10-22.rs
equities/tsla/: 2018-03-31_10Q.xlsx  2018-06-30_10Q.xlsx  2018-09-30_10Q.xlsx  2019-03-31_10Q.xlsx  2019-06-30_10Q.xlsx  2019-09-30_10Q.xlsx  2020-03-31_10Q.xlsx  2020-06-30_10Q.xlsx  2020-09-30_10Q.xlsx  2021-03-31_10Q.xlsx  2021-06-30_10Q.xlsx  2021-09-30_10Q.xlsx  2022-03-31_10Q.xlsx  2022-06-30_10Q.xlsx  2022-09-30_10Q.xlsx  2023-03-31_10Q.xlsx  2023-06-30_10Q.xlsx  2023-09-30_10Q.xlsx  2024-03-31_10Q.xlsx  2024-06-30_10Q.xlsx  2024-09-30_10Q.xlsx  2025-03-31_10Q.xlsx
examples/: optimates.rs
greece/: Cargo.toml  main.rs
gutenberg/: Cargo.toml
name/: Cargo.toml
nvda/: 1999-04-29.xls  1999-06-15.xlsx  1999-09-10.xls  1999-09-10.xlsx  1999-12-10.xls  2000-06-14.xls  2000-09-13.xls  2000-09-13.xlsx  2000-12-00.xls  2001-04-27.xlsx  2001-05-25.xls  2001-09-10.xls  2001-11-23.xls  2001-11-23.xlsx  2002-04-29.xls  2002-06-10.xls  2002-07-03.xls  2002-07-03.xlsx  2002-09-10.xls  2002-12-10.xls  2002-12-10.xlsx  2003-04-25.xls  2003-04-25.xlsx  2003-05-22.xls  2003-05-22.xlsx  2003-11-21.xls  2004-03-29.xls  2004-08-19.xls  2004-08-19.xlsx  2004-11-22.xlsx  2005-03-22.xlsx  2005-08-25.xlsx  2005-11-23.xls  2006-03-16.xls  2006-03-16.xlsx  2006-12-07.xls  2006-12-07.xlsx  2007-05-24.xls  2007-05-24.xlsx  2007-11-21.xls  (+77 more)
scrape/: Cargo.toml
shakespeare/: Cargo.toml
source/: Cargo.toml
src/: bible.rs  book.rs  daemon.rs  deed.rs  greece.rs  homer.rs  lib.rs  macedon.rs  main.rs  mendel.rs  name.rs  persia.rs  rome.rs  src.rs  tmp.rs  word.rs
(+48 files in other folders)
