[package]
name = "lib"
version = "0.1.0"
edition = "2024"

[dependencies]
bible = { path = "bible" }
book = { path = "book" }
csv = "1.3.1"
daemon = { path = "daemon" }
deed = { path = "deed" }
greece = { path = "greece" }
name = { path = "name" }
source = { path = "source" }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.149"

[workspace]
resolver = "3" # TODO(atec): why 3
members = ["bible", "book", "daemon", "deed", "greece", "gutenberg", "name", "scrape", "source"]
