[package]
name = "lib"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
name = "lib"

[dependencies]
bible = { path = "bible" }
citation = { path = "citation" }
csv = "1.3.1"
daemon = { path = "daemon" }
deed = { path = "deed" }
greece = { path = "greece" }
name = { path = "name" }
source = { path = "source" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
uniffi = { version = "0.31", features = ["cli"] }
calamine = "0.34.0"
chrono = "0.4.44"
prometheus = { version = "0.14.0", features = ["push", "reqwest"] }
reqwest = { version = "0.13.3", features = ["blocking"] }

[workspace]
resolver = "3" # TODO(atec): why 3
members = ["bible", "citation", "daemon", "deed", "greece", "gutenberg", "name", "scrape", "shakespeare", "source"]
