[package]
name = "bible"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib", "lib"]
name = "bible"

[dependencies]
daemon = { path = "../daemon" }
deed = { path = "../deed" }
name = { path = "../name" }
source = { path = "../source" }
uniffi = "0.31"

[dev-dependencies]
gutenberg = { path = "../gutenberg" }
