[package]
name = "bible"
version = "0.1.0"
edition = "2024"

[dependencies]
citation = { path = "../citation" }
daemon = { path = "../daemon" }
deed = { path = "../deed" }
name = { path = "../name" }
source = { path = "../source" }
uniffi = "0.31"

[dev-dependencies]
gutenberg = { path = "../gutenberg" }
