[package]
name = "equities"
version = "0.1.0"
edition = "2024"

[dependencies]
augurs = {version = "0.10.2", features = ["outlier"]}
calamine = "0.35.0"
chrono = {version = "0.4.44", features = ["serde"]}
pdfsink-rs = "0.2.8"
reqwest = {version = "0.13.4", features = ["blocking", "json"]}
serde = "1.0.228"
serde_json = "1.0.150"
uniffi = "0.31.1"
